# multi-agent-ops-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
examples/: example_task.yaml
src/multi_agent_ops/: __init__.py  agents.py  api.py  async_workflow.py  cli.py  config.py  exceptions.py  llm.py  logger.py  retry.py  tools.py  workflow.py
tests/: conftest.py  test_agents.py  test_config.py  test_integration.py  test_llm.py  test_retry.py  test_tools.py  test_workflow.py
